tests/functional/data/transpiler/common/errors/exclusive/must_be_defined_between_outer_inner.err
must_be_defined_between_outer_inner.cpp:4:13: error: Must define [@exclusive] variables between [@outer] and [@inner] loops
    4 |             @exclusive int kk = 0;
      |             ^
